--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: LifeStack
-description: A modular framework for intentional living: Cook, Clean, Build.
+description: "A modular framework for intentional living: Cook, Clean, Build."
 author: skelleng
 url: "https://skelleng.github.io"
 baseurl: "/lifeStack"
