--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: LifeStack
-baseurl: "" # leave empty for GitHub Pages
+baseurl: "/lifeStack" # leave empty for GitHub Pages
 url: "https://skelleng.github.io/lifeStack"
 theme: jekyll-theme-minimal
 
